# qiskit_quantum_circuit_debugger

./: LICENSE  README.md  debug_circuit.py  debug_circuit_v2.py  debugging_api.ipynb  presentation.link  pyproject.toml  qiskit_debugger.py  qpe_experimentation.ipynb  requirements.txt  setup.py  test2.py
benchmarks/: benchamrk_grover_2-qubits_hw.ipynb  benchmark_grover_2_qubit.ipynb  simulator_vs_hw_benchmar_comparison.ipynb
other/deliverables/: presentation.pptx
other/experimental_code/: first_experimental_file.ipynb  phase_error_estimation.ipynb  unitary_matrix_simulation.ipynb
qiskit_debugger/: __init__.py  qiskit_debugger.py
qiskit_debugger/tests/: test.py
